--- a/Paperland.uproject
+++ b/Paperland.uproject
@@ -14,6 +14,10 @@
 		{
 			"Name": "GameplayStateTree",
 			"Enabled": true
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
