--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,9 +51,9 @@ bForceRebuildOnLoad=True
 RuntimeGeneration=Dynamic
 
 [/Script/Engine.RendererSettings]
-r.ReflectionMethod=1
+r.ReflectionMethod=0
 r.GenerateMeshDistanceFields=True
-r.DynamicGlobalIlluminationMethod=1
+r.DynamicGlobalIlluminationMethod=0
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
@@ -68,8 +68,8 @@ r.RayTracing.RayTracingProxies.ProjectEnabled=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
-r.DefaultFeature.AmbientOcclusion=True
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AmbientOcclusion=False
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
@@ -129,4 +129,8 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/RenderDocPlugin.RenderDocPluginSettings]
+renderdoc.BinaryPath=C:\Program Files\RenderDoc
+renderdoc.AutoAttach=True
 
